--- a/data_files/LD_Cleaning_Notebook.ipynb
+++ b/data_files/LD_Cleaning_Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1784,14 +1784,14 @@
        "[3193 rows x 22 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_path = \"LD-Case-Counts-by-County-00-17.csv\"\n",
-    "lyme_df_raw = pd.read_csv(csv_path, encoding=\"ISO-8859-1\")\n",
+    "csv_ld = \"LD-Case-Counts-by-County-00-17.csv\"\n",
+    "lyme_df_raw = pd.read_csv(csv_ld, encoding=\"ISO-8859-1\")\n",
     "lyme_df_raw"
    ]
   },
@@ -3551,64 +3551,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lyme_states = lyme_df_clean.groupby(['Stname']).sum()\n",
-    "lyme_states\n",
-    "lyme_states.to_csv(r'LD_Counts_by_State_Per_Year.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17730\n",
-      "17029\n",
-      "23763\n",
-      "21273\n",
-      "19804\n",
-      "23305\n",
-      "19931\n",
-      "27444\n",
-      "35198\n",
-      "38468\n",
-      "30158\n",
-      "33097\n",
-      "30831\n",
-      "36307\n",
-      "33461\n",
-      "38069\n",
-      "36429\n",
-      "42743\n"
+     "ename": "NameError",
+     "evalue": "name 'lyme_df_clean' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-a662524d29a9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlyme_states\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlyme_df_clean\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Stname'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mlyme_states\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'LD Incident Growth Rate'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlyme_states\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Cases2017'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mlyme_states\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Cases2000'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mlyme_states\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Cases2000'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mlyme_states\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Hawaii'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mlyme_states\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'lyme_df_clean' is not defined"
      ]
     }
    ],
    "source": [
-    "lyme_county_total_2000 = lyme_df_clean['Cases2000'].sum()\n",
-    "lyme_county_total_2001 = lyme_df_clean['Cases2001'].sum()\n",
-    "lyme_county_total_2002 = lyme_df_clean['Cases2002'].sum()\n",
-    "lyme_county_total_2003 = lyme_df_clean['Cases2003'].sum()\n",
-    "lyme_county_total_2004 = lyme_df_clean['Cases2004'].sum()\n",
-    "lyme_county_total_2005 = lyme_df_clean['Cases2005'].sum()\n",
-    "lyme_county_total_2006 = lyme_df_clean['Cases2006'].sum()\n",
-    "lyme_county_total_2007 = lyme_df_clean['Cases2007'].sum()\n",
-    "lyme_county_total_2008 = lyme_df_clean['Cases2008'].sum()\n",
-    "lyme_county_total_2009 = lyme_df_clean['Cases2009'].sum()\n",
-    "lyme_county_total_2010 = lyme_df_clean['Cases2010'].sum()\n",
-    "lyme_county_total_2011 = lyme_df_clean['Cases2011'].sum()\n",
-    "lyme_county_total_2012 = lyme_df_clean['Cases2012'].sum()\n",
-    "lyme_county_total_2013 = lyme_df_clean['Cases2013'].sum()\n",
-    "lyme_county_total_2014 = lyme_df_clean['Cases2014'].sum()\n",
-    "lyme_county_total_2015 = lyme_df_clean['Cases2015'].sum()\n",
-    "lyme_county_total_2016 = lyme_df_clean['Cases2016'].sum()\n",
-    "lyme_county_total_2017 = lyme_df_clean['Cases2017'].sum()\n",
+    "lyme_states = lyme_df_clean.groupby(['Stname']).sum()\n",
+    "lyme_states['LD Incident Growth Rate'] = (lyme_states['Cases2017'] - lyme_states['Cases2000']) / lyme_states['Cases2000'] * 100\n",
+    "lyme_states.drop(['Hawaii'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lyme_df_clean' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-0b81c7bde907>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlyme2000\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlyme_df_clean\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Cases2000'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mlyme2001\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlyme_df_clean\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Cases2001'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mlyme2002\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlyme_df_clean\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Cases2002'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mlyme2003\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlyme_df_clean\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Cases2003'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mlyme2004\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlyme_df_clean\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Cases2004'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'lyme_df_clean' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "lyme2000 = lyme_df_clean['Cases2000'].sum()\n",
+    "lyme2001 = lyme_df_clean['Cases2001'].sum()\n",
+    "lyme2002 = lyme_df_clean['Cases2002'].sum()\n",
+    "lyme2003 = lyme_df_clean['Cases2003'].sum()\n",
+    "lyme2004 = lyme_df_clean['Cases2004'].sum()\n",
+    "lyme2005 = lyme_df_clean['Cases2005'].sum()\n",
+    "lyme2006 = lyme_df_clean['Cases2006'].sum()\n",
+    "lyme2007 = lyme_df_clean['Cases2007'].sum()\n",
+    "lyme2008 = lyme_df_clean['Cases2008'].sum()\n",
+    "lyme2009 = lyme_df_clean['Cases2009'].sum()\n",
+    "lyme2010 = lyme_df_clean['Cases2010'].sum()\n",
+    "lyme2011 = lyme_df_clean['Cases2011'].sum()\n",
+    "lyme2012 = lyme_df_clean['Cases2012'].sum()\n",
+    "lyme2013 = lyme_df_clean['Cases2013'].sum()\n",
+    "lyme2014 = lyme_df_clean['Cases2014'].sum()\n",
+    "lyme2015 = lyme_df_clean['Cases2015'].sum()\n",
+    "lyme2016 = lyme_df_clean['Cases2016'].sum()\n",
+    "lyme2017 = lyme_df_clean['Cases2017'].sum()\n",
     "\n",
     "print(lyme_county_total_2000)\n",
     "print(lyme_county_total_2001)\n",
