--- a/data_files/LD Counts vs States by Year.ipynb
+++ b/data_files/LD Counts vs States by Year.ipynb
@@ -4385,7 +4385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -4575,7 +4575,7 @@
        "4  101.635507  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4588,107 +4588,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>2000</th>\n",
-       "      <th>2001</th>\n",
-       "      <th>2002</th>\n",
-       "      <th>2003</th>\n",
-       "      <th>2004</th>\n",
-       "      <th>2005</th>\n",
-       "      <th>2006</th>\n",
-       "      <th>2007</th>\n",
-       "      <th>2008</th>\n",
-       "      <th>2009</th>\n",
-       "      <th>2010</th>\n",
-       "      <th>2011</th>\n",
-       "      <th>2012</th>\n",
-       "      <th>2013</th>\n",
-       "      <th>2014</th>\n",
-       "      <th>2015</th>\n",
-       "      <th>2016</th>\n",
-       "      <th>2017</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>US</th>\n",
-       "      <td>69.568697</td>\n",
-       "      <td>63.984238</td>\n",
-       "      <td>92.384916</td>\n",
-       "      <td>69.918682</td>\n",
-       "      <td>65.612663</td>\n",
-       "      <td>79.340668</td>\n",
-       "      <td>82.406434</td>\n",
-       "      <td>119.216555</td>\n",
-       "      <td>157.790272</td>\n",
-       "      <td>170.786109</td>\n",
-       "      <td>138.535335</td>\n",
-       "      <td>154.852592</td>\n",
-       "      <td>146.369596</td>\n",
-       "      <td>182.099124</td>\n",
-       "      <td>151.668262</td>\n",
-       "      <td>164.133798</td>\n",
-       "      <td>166.254524</td>\n",
-       "      <td>208.537675</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         2000       2001       2002       2003       2004       2005  \\\n",
-       "US  69.568697  63.984238  92.384916  69.918682  65.612663  79.340668   \n",
-       "\n",
-       "         2006        2007        2008        2009        2010        2011  \\\n",
-       "US  82.406434  119.216555  157.790272  170.786109  138.535335  154.852592   \n",
-       "\n",
-       "          2012        2013        2014        2015        2016        2017  \n",
-       "US  146.369596  182.099124  151.668262  164.133798  166.254524  208.537675  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "LD_state_means = {'2000': ld2000.mean(),'2001':ld2001.mean(),'2002':ld2002.mean(),'2003':ld2003.mean(),'2004':ld2004.mean(),'2005':ld2005.mean(),'2006':ld2006.mean(),'2007':ld2007.mean(),'2008':ld2008.mean(),'2009':ld2009.mean(),'2010':ld2010.mean(),'2011':ld2011.mean(),'2012':ld2012.mean(),'2013':ld2013.mean(),'2014':ld2014.mean(),'2015':ld2015.mean(),'2016':ld2016.mean(), '2017': ld2017.mean()}\n",
-    "final_df = pd.DataFrame(LD_state_means, index=[\"US\"])\n",
-    "final_df"
+    "region_df = region_df.transpose()\n",
+    "region_df.to_csv('Regions Transposed')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "LD_state_means = {'2000': ld2000.mean(),'2001':ld2001.mean(),'2002':ld2002.mean(),'2003':ld2003.mean(),'2004':ld2004.mean(),'2005':ld2005.mean(),'2006':ld2006.mean(),'2007':ld2007.mean(),'2008':ld2008.mean(),'2009':ld2009.mean(),'2010':ld2010.mean(),'2011':ld2011.mean(),'2012':ld2012.mean(),'2013':ld2013.mean(),'2014':ld2014.mean(),'2015':ld2015.mean(),'2016':ld2016.mean(), '2017': ld2017.mean()}\n",
+    "final_df = pd.DataFrame(LD_state_means, index=[\"US\"])\n",
+    "final_df = final_df.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.to_csv('Lyme Disease Dataset Final.csv', index=True)"
+    "final_df.to_csv('us_lyme_final.csv', index=True)"
    ]
   }
  ],
